Update migrating-from-h2.md